[package]
name = "batis4sqlx-macros"
version = "0.1.1"
edition = "2024"

authors = ["W <w793981522@qq.com>"]
description = "batis4sqlx-macros"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Wintheres/batis4sqlx-macros"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2.0.106", features = ["full", "parsing", "extra-traits"] }
